--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "react-native-web": "~0.13.12"
   },
   "devDependencies": {
-    "@babel/core": "~7.9.0"
+    "@babel/core": "~7.9.0",
+    "@testing-library/react-native": "^7.0.2"
   },
   "private": true
 }
