--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-navigation/native": "^5.7.6",
     "@react-navigation/stack": "^5.9.3",
     "expo": "~39.0.2",
+    "expo-facebook": "^9.0.0",
     "expo-font": "~8.3.0",
     "expo-status-bar": "~1.0.2",
     "native-base": "^2.13.14",
@@ -21,6 +22,7 @@
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-39.0.3.tar.gz",
     "react-native-elements": "^2.3.2",
+    "react-native-fbsdk": "^2.0.0",
     "react-native-gesture-handler": "^1.7.0",
     "react-native-ionicons": "^4.6.5",
     "react-native-reanimated": "^1.13.1",
