--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "react-native-gesture-handler": "^1.7.0",
     "react-native-ionicons": "^4.6.5",
     "react-native-reanimated": "^1.13.1",
-    "react-native-safe-area-context": "^3.1.4",
+    "react-native-safe-area-context": "3.1.4",
     "react-native-screens": "^2.10.1",
     "react-native-web": "~0.13.12",
     "react-navigation": "^4.4.2"
