--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "expo-facebook": "^9.0.0",
     "expo-font": "~8.3.0",
     "expo-status-bar": "~1.0.2",
+    "expo-web-browser": "^8.5.0",
     "native-base": "^2.13.14",
     "react": "16.13.1",
     "react-dom": "16.13.1",
