--- a/app.json
+++ b/app.json
@@ -21,6 +21,9 @@
     },
     "web": {
       "favicon": "./assets/favicon.png"
-    }
+    },
+    "facebookScheme": "fb438263017145989",
+    "facebookAppId": "438263017145989",
+    "facebookDisplayName": "Snowpool Native"
   }
 }
