--- a/package.json
+++ b/package.json
@@ -8,39 +8,40 @@
     "eject": "expo eject"
   },
   "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^1.2.32",
-    "@fortawesome/free-brands-svg-icons": "^5.15.1",
-    "@fortawesome/free-regular-svg-icons": "^5.15.1",
-    "@fortawesome/free-solid-svg-icons": "^5.15.1",
-    "@fortawesome/react-native-fontawesome": "^0.2.6",
-    "@react-native-community/masked-view": "^0.1.10",
-    "@react-navigation/bottom-tabs": "^5.9.2",
-    "@react-navigation/drawer": "^5.9.3",
-    "@react-navigation/native": "^5.7.6",
-    "@react-navigation/stack": "^5.9.3",
-    "expo": "~39.0.2",
-    "expo-facebook": "^9.0.0",
-    "expo-font": "~8.3.0",
-    "expo-status-bar": "~1.0.2",
-    "expo-web-browser": "^8.5.0",
-    "native-base": "^2.13.14",
+    "@fortawesome/fontawesome-svg-core": "1.2.32",
+    "@fortawesome/free-brands-svg-icons": "5.15.1",
+    "@fortawesome/free-regular-svg-icons": "5.15.1",
+    "@fortawesome/free-solid-svg-icons": "5.15.1",
+    "@fortawesome/react-native-fontawesome": "0.2.6",
+    "@react-native-community/masked-view": "0.1.10",
+    "@react-navigation/bottom-tabs": "5.9.2",
+    "@react-navigation/drawer": "5.9.3",
+    "@react-navigation/native": "5.7.6",
+    "@react-navigation/stack": "5.9.3",
+    "expo": "39.0.2",
+    "expo-facebook": "9.0.0",
+    "expo-font": "8.3.0",
+    "expo-status-bar": "1.0.2",
+    "expo-web-browser": "8.5.0",
+    "native-base": "2.13.14",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-39.0.3.tar.gz",
-    "react-native-elements": "^2.3.2",
-    "react-native-gesture-handler": "^1.7.0",
-    "react-native-ionicons": "^4.6.5",
-    "react-native-reanimated": "^1.13.1",
+    "react-native-elements": "2.3.2",
+    "react-native-gesture-handler": "1.7.0",
+    "react-native-ionicons": "4.6.5",
+    "react-native-reanimated": "1.13.1",
     "react-native-safe-area-context": "3.1.4",
-    "react-native-screens": "^2.10.1",
-    "react-native-svg": "^12.1.0",
-    "react-native-swiper": "^1.6.0-rc.3",
-    "react-native-web": "~0.13.12",
-    "react-navigation": "^4.4.2"
+    "react-native-screens": "2.10.1",
+    "react-native-svg": "12.1.0",
+    "react-native-swiper": "1.6.0-rc.3",
+    "react-native-unimodules": "0.11.0",
+    "react-native-web": "0.13.12",
+    "react-navigation": "4.4.2"
   },
   "devDependencies": {
-    "@babel/core": "~7.9.0",
-    "@testing-library/react-native": "^7.0.2"
+    "@babel/core": "7.9.0",
+    "@testing-library/react-native": "7.0.2"
   },
   "private": true
 }
